force-app/main/default/objects/Organisation__c/Organisation__c.object-meta.xml
<CustomObject>
    <label>Org</label>
    <nameField>
        <label>Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orgs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>