force-app/main/default/objects/Organisation__c/fields/Organisation_ID__c.field-meta.xml
<CustomField>
    <fullName>Organisation_ID__c</fullName>
    <label>Organization ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>