force-app/main/default/objects/Organisation__c/fields/Organisation_Type__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Type__c</fullName>
    <label>Organization Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Developer/Production</fullName>
                <default>true</default>
                <label>Developer/Production</label>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>Government cloud org</fullName>
            </value>
            <value>
                <fullName>Veeva Vault</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>MuleSoft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>