force-app/main/default/objects/Organisation__c/fields/User_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Full_Name__c</fullName>
    <description>Full Name of User who authorize the environment</description>
    <label>User Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>